Completed code-along

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "32.204207968574636"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "50.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "28.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "array(['S', 'C', 'Q', nan], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,19 +384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Embarked\n",
        "S    644\n",
        "C    168\n",
        "Q     77\n",
-       "Name: Embarked, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,22 +435,32 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 891 entries, 0 to 890\n",
+      "Index: 891 entries, 0 to 890\n",
       "Data columns (total 12 columns):\n",
-      "PassengerId    891 non-null object\n",
-      "Survived       891 non-null object\n",
-      "Pclass         891 non-null object\n",
-      "Name           891 non-null object\n",
-      "Sex            891 non-null object\n",
-      "Age            891 non-null object\n",
-      "SibSp          891 non-null object\n",
-      "Parch          891 non-null object\n",
-      "Ticket         891 non-null object\n",
-      "Fare           891 non-null object\n",
-      "Cabin          891 non-null object\n",
-      "Embarked       891 non-null object\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   PassengerId  891 non-null    object\n",
+      " 1   Survived     891 non-null    object\n",
+      " 2   Pclass       891 non-null    object\n",
+      " 3   Name         891 non-null    object\n",
+      " 4   Sex          891 non-null    object\n",
+      " 5   Age          891 non-null    object\n",
+      " 6   SibSp        891 non-null    object\n",
+      " 7   Parch        891 non-null    object\n",
+      " 8   Ticket       891 non-null    object\n",
+      " 9   Fare         891 non-null    object\n",
+      " 10  Cabin        891 non-null    object\n",
+      " 11  Embarked     891 non-null    object\n",
       "dtypes: object(12)\n",
       "memory usage: 90.5+ KB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_57223/1166136562.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  string_df = df.applymap(lambda x: str(x))\n"
      ]
     }
    ],
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +500,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
